cmake_minimum_required(VERSION 3.31)
project(Junlge_PintOs C)

set(CMAKE_C_STANDARD 11)

include_directories(pintos-kaist-master/include)
include_directories(pintos-kaist-master/include/devices)
include_directories(pintos-kaist-master/include/filesys)
include_directories(pintos-kaist-master/include/lib)
include_directories(pintos-kaist-master/include/lib/kernel)
include_directories(pintos-kaist-master/include/lib/user)
include_directories(pintos-kaist-master/include/threads)
include_directories(pintos-kaist-master/include/userprog)
include_directories(pintos-kaist-master/include/vm)
include_directories(pintos-kaist-master/tests)
include_directories(pintos-kaist-master/tests/filesys)
include_directories(pintos-kaist-master/tests/filesys/base)
include_directories(pintos-kaist-master/tests/filesys/extended)
include_directories(pintos-kaist-master/tests/threads)
include_directories(pintos-kaist-master/tests/userprog)
include_directories(pintos-kaist-master/tests/vm)

add_executable(Junlge_PintOs
        pintos-kaist-master/devices/disk.c
        pintos-kaist-master/devices/input.c
        pintos-kaist-master/devices/intq.c
        pintos-kaist-master/devices/kbd.c
        pintos-kaist-master/devices/serial.c
        pintos-kaist-master/devices/timer.c
        pintos-kaist-master/devices/vga.c
        pintos-kaist-master/filesys/directory.c
        pintos-kaist-master/filesys/fat.c
        pintos-kaist-master/filesys/file.c
        pintos-kaist-master/filesys/filesys.c
        pintos-kaist-master/filesys/free-map.c
        pintos-kaist-master/filesys/fsutil.c
        pintos-kaist-master/filesys/inode.c
        pintos-kaist-master/filesys/page_cache.c
        pintos-kaist-master/include/devices/disk.h
        pintos-kaist-master/include/devices/input.h
        pintos-kaist-master/include/devices/intq.h
        pintos-kaist-master/include/devices/kbd.h
        pintos-kaist-master/include/devices/serial.h
        pintos-kaist-master/include/devices/timer.h
        pintos-kaist-master/include/devices/vga.h
        pintos-kaist-master/include/filesys/directory.h
        pintos-kaist-master/include/filesys/fat.h
        pintos-kaist-master/include/filesys/file.h
        pintos-kaist-master/include/filesys/filesys.h
        pintos-kaist-master/include/filesys/free-map.h
        pintos-kaist-master/include/filesys/fsutil.h
        pintos-kaist-master/include/filesys/inode.h
        pintos-kaist-master/include/filesys/off_t.h
        pintos-kaist-master/include/filesys/page_cache.h
        pintos-kaist-master/include/lib/kernel/bitmap.h
        pintos-kaist-master/include/lib/kernel/console.h
        pintos-kaist-master/include/lib/kernel/hash.h
        pintos-kaist-master/include/lib/kernel/list.h
        pintos-kaist-master/include/lib/kernel/stdio.h
        pintos-kaist-master/include/lib/user/stdio.h
        pintos-kaist-master/include/lib/user/syscall.h
        pintos-kaist-master/include/lib/ctype.h
        pintos-kaist-master/include/lib/debug.h
        pintos-kaist-master/include/lib/inttypes.h
        pintos-kaist-master/include/lib/limits.h
        pintos-kaist-master/include/lib/random.h
        pintos-kaist-master/include/lib/round.h
        pintos-kaist-master/include/lib/stdarg.h
        pintos-kaist-master/include/lib/stdbool.h
        pintos-kaist-master/include/lib/stddef.h
        pintos-kaist-master/include/lib/stdint.h
        pintos-kaist-master/include/lib/stdio.h
        pintos-kaist-master/include/lib/stdlib.h
        pintos-kaist-master/include/lib/string.h
        pintos-kaist-master/include/lib/syscall-nr.h
        pintos-kaist-master/include/threads/flags.h
        pintos-kaist-master/include/threads/init.h
        pintos-kaist-master/include/threads/interrupt.h
        pintos-kaist-master/include/threads/intr-stubs.h
        pintos-kaist-master/include/threads/io.h
        pintos-kaist-master/include/threads/loader.h
        pintos-kaist-master/include/threads/malloc.h
        pintos-kaist-master/include/threads/mmu.h
        pintos-kaist-master/include/threads/palloc.h
        pintos-kaist-master/include/threads/pte.h
        pintos-kaist-master/include/threads/synch.h
        pintos-kaist-master/include/threads/thread.h
        pintos-kaist-master/include/threads/vaddr.h
        pintos-kaist-master/include/userprog/exception.h
        pintos-kaist-master/include/userprog/gdt.h
        pintos-kaist-master/include/userprog/process.h
        pintos-kaist-master/include/userprog/syscall.h
        pintos-kaist-master/include/userprog/tss.h
        pintos-kaist-master/include/vm/anon.h
        pintos-kaist-master/include/vm/file.h
        pintos-kaist-master/include/vm/inspect.h
        pintos-kaist-master/include/vm/uninit.h
        pintos-kaist-master/include/vm/vm.h
        pintos-kaist-master/include/intrinsic.h
        pintos-kaist-master/lib/kernel/bitmap.c
        pintos-kaist-master/lib/kernel/console.c
        pintos-kaist-master/lib/kernel/debug.c
        pintos-kaist-master/lib/kernel/hash.c
        pintos-kaist-master/lib/kernel/list.c
        pintos-kaist-master/lib/user/console.c
        pintos-kaist-master/lib/user/debug.c
        pintos-kaist-master/lib/user/entry.c
        pintos-kaist-master/lib/user/syscall.c
        pintos-kaist-master/lib/arithmetic.c
        pintos-kaist-master/lib/debug.c
        pintos-kaist-master/lib/random.c
        pintos-kaist-master/lib/stdio.c
        pintos-kaist-master/lib/stdlib.c
        pintos-kaist-master/lib/string.c
        pintos-kaist-master/tests/filesys/base/child-syn-read.c
        pintos-kaist-master/tests/filesys/base/child-syn-wrt.c
        pintos-kaist-master/tests/filesys/base/lg-create.c
        pintos-kaist-master/tests/filesys/base/lg-full.c
        pintos-kaist-master/tests/filesys/base/lg-random.c
        pintos-kaist-master/tests/filesys/base/lg-seq-block.c
        pintos-kaist-master/tests/filesys/base/lg-seq-random.c
        pintos-kaist-master/tests/filesys/base/sm-create.c
        pintos-kaist-master/tests/filesys/base/sm-full.c
        pintos-kaist-master/tests/filesys/base/sm-random.c
        pintos-kaist-master/tests/filesys/base/sm-seq-block.c
        pintos-kaist-master/tests/filesys/base/sm-seq-random.c
        pintos-kaist-master/tests/filesys/base/syn-read.c
        pintos-kaist-master/tests/filesys/base/syn-read.h
        pintos-kaist-master/tests/filesys/base/syn-remove.c
        pintos-kaist-master/tests/filesys/base/syn-write.c
        pintos-kaist-master/tests/filesys/base/syn-write.h
        pintos-kaist-master/tests/filesys/buffer-cache/bc-easy.c
        pintos-kaist-master/tests/filesys/extended/child-syn-rw.c
        pintos-kaist-master/tests/filesys/extended/dir-empty-name.c
        pintos-kaist-master/tests/filesys/extended/dir-mk-tree.c
        pintos-kaist-master/tests/filesys/extended/dir-mkdir.c
        pintos-kaist-master/tests/filesys/extended/dir-open.c
        pintos-kaist-master/tests/filesys/extended/dir-over-file.c
        pintos-kaist-master/tests/filesys/extended/dir-rm-cwd.c
        pintos-kaist-master/tests/filesys/extended/dir-rm-parent.c
        pintos-kaist-master/tests/filesys/extended/dir-rm-root.c
        pintos-kaist-master/tests/filesys/extended/dir-rm-tree.c
        pintos-kaist-master/tests/filesys/extended/dir-rmdir.c
        pintos-kaist-master/tests/filesys/extended/dir-under-file.c
        pintos-kaist-master/tests/filesys/extended/dir-vine.c
        pintos-kaist-master/tests/filesys/extended/grow-create.c
        pintos-kaist-master/tests/filesys/extended/grow-dir-lg.c
        pintos-kaist-master/tests/filesys/extended/grow-file-size.c
        pintos-kaist-master/tests/filesys/extended/grow-root-lg.c
        pintos-kaist-master/tests/filesys/extended/grow-root-sm.c
        pintos-kaist-master/tests/filesys/extended/grow-seq-lg.c
        pintos-kaist-master/tests/filesys/extended/grow-seq-sm.c
        pintos-kaist-master/tests/filesys/extended/grow-sparse.c
        pintos-kaist-master/tests/filesys/extended/grow-tell.c
        pintos-kaist-master/tests/filesys/extended/grow-two-files.c
        pintos-kaist-master/tests/filesys/extended/mk-tree.c
        pintos-kaist-master/tests/filesys/extended/mk-tree.h
        pintos-kaist-master/tests/filesys/extended/symlink-dir.c
        pintos-kaist-master/tests/filesys/extended/symlink-file.c
        pintos-kaist-master/tests/filesys/extended/symlink-link.c
        pintos-kaist-master/tests/filesys/extended/syn-rw.c
        pintos-kaist-master/tests/filesys/extended/syn-rw.h
        pintos-kaist-master/tests/filesys/extended/tar.c
        pintos-kaist-master/tests/filesys/mount/mount-easy.c
        pintos-kaist-master/tests/filesys/seq-test.c
        pintos-kaist-master/tests/filesys/seq-test.h
        pintos-kaist-master/tests/internal/list.c
        pintos-kaist-master/tests/internal/stdio.c
        pintos-kaist-master/tests/internal/stdlib.c
        pintos-kaist-master/tests/threads/mlfqs/mlfqs-block.c
        pintos-kaist-master/tests/threads/mlfqs/mlfqs-fair.c
        pintos-kaist-master/tests/threads/mlfqs/mlfqs-load-1.c
        pintos-kaist-master/tests/threads/mlfqs/mlfqs-load-60.c
        pintos-kaist-master/tests/threads/mlfqs/mlfqs-load-avg.c
        pintos-kaist-master/tests/threads/mlfqs/mlfqs-recent-1.c
        pintos-kaist-master/tests/threads/alarm-negative.c
        pintos-kaist-master/tests/threads/alarm-priority.c
        pintos-kaist-master/tests/threads/alarm-simultaneous.c
        pintos-kaist-master/tests/threads/alarm-wait.c
        pintos-kaist-master/tests/threads/alarm-zero.c
        pintos-kaist-master/tests/threads/priority-change.c
        pintos-kaist-master/tests/threads/priority-condvar.c
        pintos-kaist-master/tests/threads/priority-donate-chain.c
        pintos-kaist-master/tests/threads/priority-donate-lower.c
        pintos-kaist-master/tests/threads/priority-donate-multiple.c
        pintos-kaist-master/tests/threads/priority-donate-multiple2.c
        pintos-kaist-master/tests/threads/priority-donate-nest.c
        pintos-kaist-master/tests/threads/priority-donate-one.c
        pintos-kaist-master/tests/threads/priority-donate-sema.c
        pintos-kaist-master/tests/threads/priority-fifo.c
        pintos-kaist-master/tests/threads/priority-preempt.c
        pintos-kaist-master/tests/threads/priority-sema.c
        pintos-kaist-master/tests/threads/tests.c
        pintos-kaist-master/tests/threads/tests.h
        pintos-kaist-master/tests/userprog/dup2/dup2-complex.c
        pintos-kaist-master/tests/userprog/dup2/dup2-simple.c
        pintos-kaist-master/tests/userprog/no-vm/multi-oom.c
        pintos-kaist-master/tests/userprog/args.c
        pintos-kaist-master/tests/userprog/bad-jump.c
        pintos-kaist-master/tests/userprog/bad-jump2.c
        pintos-kaist-master/tests/userprog/bad-read.c
        pintos-kaist-master/tests/userprog/bad-read2.c
        pintos-kaist-master/tests/userprog/bad-write.c
        pintos-kaist-master/tests/userprog/bad-write2.c
        pintos-kaist-master/tests/userprog/boundary.c
        pintos-kaist-master/tests/userprog/boundary.h
        pintos-kaist-master/tests/userprog/child-bad.c
        pintos-kaist-master/tests/userprog/child-close.c
        pintos-kaist-master/tests/userprog/child-read.c
        pintos-kaist-master/tests/userprog/child-rox.c
        pintos-kaist-master/tests/userprog/child-simple.c
        pintos-kaist-master/tests/userprog/close-bad-fd.c
        pintos-kaist-master/tests/userprog/close-normal.c
        pintos-kaist-master/tests/userprog/close-twice.c
        pintos-kaist-master/tests/userprog/create-bad-ptr.c
        pintos-kaist-master/tests/userprog/create-bound.c
        pintos-kaist-master/tests/userprog/create-empty.c
        pintos-kaist-master/tests/userprog/create-exists.c
        pintos-kaist-master/tests/userprog/create-long.c
        pintos-kaist-master/tests/userprog/create-normal.c
        pintos-kaist-master/tests/userprog/create-null.c
        pintos-kaist-master/tests/userprog/exec-arg.c
        pintos-kaist-master/tests/userprog/exec-bad-ptr.c
        pintos-kaist-master/tests/userprog/exec-boundary.c
        pintos-kaist-master/tests/userprog/exec-missing.c
        pintos-kaist-master/tests/userprog/exec-once.c
        pintos-kaist-master/tests/userprog/exec-read.c
        pintos-kaist-master/tests/userprog/exit.c
        pintos-kaist-master/tests/userprog/fork-boundary.c
        pintos-kaist-master/tests/userprog/fork-close.c
        pintos-kaist-master/tests/userprog/fork-multiple.c
        pintos-kaist-master/tests/userprog/fork-once.c
        pintos-kaist-master/tests/userprog/fork-read.c
        pintos-kaist-master/tests/userprog/fork-recursive.c
        pintos-kaist-master/tests/userprog/halt.c
        pintos-kaist-master/tests/userprog/multi-child-fd.c
        pintos-kaist-master/tests/userprog/multi-recurse.c
        pintos-kaist-master/tests/userprog/open-bad-ptr.c
        pintos-kaist-master/tests/userprog/open-boundary.c
        pintos-kaist-master/tests/userprog/open-empty.c
        pintos-kaist-master/tests/userprog/open-missing.c
        pintos-kaist-master/tests/userprog/open-normal.c
        pintos-kaist-master/tests/userprog/open-null.c
        pintos-kaist-master/tests/userprog/open-twice.c
        pintos-kaist-master/tests/userprog/read-bad-fd.c
        pintos-kaist-master/tests/userprog/read-bad-ptr.c
        pintos-kaist-master/tests/userprog/read-boundary.c
        pintos-kaist-master/tests/userprog/read-normal.c
        pintos-kaist-master/tests/userprog/read-stdout.c
        pintos-kaist-master/tests/userprog/read-zero.c
        pintos-kaist-master/tests/userprog/rox-child.c
        pintos-kaist-master/tests/userprog/rox-multichild.c
        pintos-kaist-master/tests/userprog/rox-simple.c
        pintos-kaist-master/tests/userprog/wait-bad-pid.c
        pintos-kaist-master/tests/userprog/wait-killed.c
        pintos-kaist-master/tests/userprog/wait-simple.c
        pintos-kaist-master/tests/userprog/wait-twice.c
        pintos-kaist-master/tests/userprog/write-bad-fd.c
        pintos-kaist-master/tests/userprog/write-bad-ptr.c
        pintos-kaist-master/tests/userprog/write-boundary.c
        pintos-kaist-master/tests/userprog/write-normal.c
        pintos-kaist-master/tests/userprog/write-stdin.c
        pintos-kaist-master/tests/userprog/write-zero.c
        pintos-kaist-master/tests/vm/cow/cow-simple.c
        pintos-kaist-master/tests/vm/child-inherit.c
        pintos-kaist-master/tests/vm/child-linear.c
        pintos-kaist-master/tests/vm/child-mm-wrt.c
        pintos-kaist-master/tests/vm/child-qsort-mm.c
        pintos-kaist-master/tests/vm/child-qsort.c
        pintos-kaist-master/tests/vm/child-sort.c
        pintos-kaist-master/tests/vm/child-swap.c
        pintos-kaist-master/tests/vm/lazy-anon.c
        pintos-kaist-master/tests/vm/lazy-file.c
        pintos-kaist-master/tests/vm/mmap-bad-fd.c
        pintos-kaist-master/tests/vm/mmap-bad-fd2.c
        pintos-kaist-master/tests/vm/mmap-bad-fd3.c
        pintos-kaist-master/tests/vm/mmap-bad-off.c
        pintos-kaist-master/tests/vm/mmap-clean.c
        pintos-kaist-master/tests/vm/mmap-close.c
        pintos-kaist-master/tests/vm/mmap-exit.c
        pintos-kaist-master/tests/vm/mmap-inherit.c
        pintos-kaist-master/tests/vm/mmap-kernel.c
        pintos-kaist-master/tests/vm/mmap-misalign.c
        pintos-kaist-master/tests/vm/mmap-null.c
        pintos-kaist-master/tests/vm/mmap-off.c
        pintos-kaist-master/tests/vm/mmap-over-code.c
        pintos-kaist-master/tests/vm/mmap-over-data.c
        pintos-kaist-master/tests/vm/mmap-over-stk.c
        pintos-kaist-master/tests/vm/mmap-overlap.c
        pintos-kaist-master/tests/vm/mmap-read.c
        pintos-kaist-master/tests/vm/mmap-remove.c
        pintos-kaist-master/tests/vm/mmap-ro.c
        pintos-kaist-master/tests/vm/mmap-shuffle.c
        pintos-kaist-master/tests/vm/mmap-twice.c
        pintos-kaist-master/tests/vm/mmap-unmap.c
        pintos-kaist-master/tests/vm/mmap-write.c
        pintos-kaist-master/tests/vm/mmap-zero-len.c
        pintos-kaist-master/tests/vm/mmap-zero.c
        pintos-kaist-master/tests/vm/page-linear.c
        pintos-kaist-master/tests/vm/page-merge-mm.c
        pintos-kaist-master/tests/vm/page-merge-par.c
        pintos-kaist-master/tests/vm/page-merge-seq.c
        pintos-kaist-master/tests/vm/page-merge-stk.c
        pintos-kaist-master/tests/vm/page-parallel.c
        pintos-kaist-master/tests/vm/page-shuffle.c
        pintos-kaist-master/tests/vm/parallel-merge.c
        pintos-kaist-master/tests/vm/parallel-merge.h
        pintos-kaist-master/tests/vm/pt-bad-addr.c
        pintos-kaist-master/tests/vm/pt-bad-read.c
        pintos-kaist-master/tests/vm/pt-big-stk-obj.c
        pintos-kaist-master/tests/vm/pt-grow-bad.c
        pintos-kaist-master/tests/vm/pt-grow-stack.c
        pintos-kaist-master/tests/vm/pt-grow-stk-sc.c
        pintos-kaist-master/tests/vm/pt-write-code.c
        pintos-kaist-master/tests/vm/pt-write-code2.c
        pintos-kaist-master/tests/vm/qsort.c
        pintos-kaist-master/tests/vm/qsort.h
        pintos-kaist-master/tests/vm/swap-anon.c
        pintos-kaist-master/tests/vm/swap-file.c
        pintos-kaist-master/tests/vm/swap-fork.c
        pintos-kaist-master/tests/vm/swap-iter.c
        pintos-kaist-master/tests/arc4.c
        pintos-kaist-master/tests/arc4.h
        pintos-kaist-master/tests/cksum.c
        pintos-kaist-master/tests/cksum.h
        pintos-kaist-master/tests/lib.c
        pintos-kaist-master/tests/lib.h
        pintos-kaist-master/tests/main.c
        pintos-kaist-master/tests/main.h
        pintos-kaist-master/threads/init.c
        pintos-kaist-master/threads/interrupt.c
        pintos-kaist-master/threads/malloc.c
        pintos-kaist-master/threads/mmu.c
        pintos-kaist-master/threads/palloc.c
        pintos-kaist-master/threads/synch.c
        pintos-kaist-master/threads/thread.c
        pintos-kaist-master/userprog/exception.c
        pintos-kaist-master/userprog/gdt.c
        pintos-kaist-master/userprog/process.c
        pintos-kaist-master/userprog/syscall.c
        pintos-kaist-master/userprog/tss.c
        pintos-kaist-master/vm/anon.c
        pintos-kaist-master/vm/file.c
        pintos-kaist-master/vm/inspect.c
        pintos-kaist-master/vm/uninit.c
        pintos-kaist-master/vm/vm.c)
